# rust-logviewer

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
src/: main.rs
web/: index.html
